# hyperapi

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  design.mdj  sample_config.yaml  test.jmx
.github/workflows/: release.yml  rust.yml
ci/: install-rust.sh  make-release.sh
clients/: python.py
docs/: book.toml  design.mdj
docs/src/: SUMMARY.md  key-concept.md  overview.md
docs/src/dev/: design.md  readme.md
docs/src/dev/saas/: deploy.md  design.md
docs/src/gateway/: benchmark.md  config-format.md  installation.md  middlewares.md  readme.md
docs/src/saas/: readme.md  tutorial-app.md  tutorial-gateway.md  tutorial-service.md  user.md
examples/: main.rs
src/: lib.rs  main.rs  stack.rs
src/auth/: app_key.rs  auth_handler.rs  authenticator.rs  client_filter.rs  jwt.rs  mod.rs  no_auth.rs  service.rs
src/config/: common.rs  config.rs  config_source.rs  etcd_config.rs  file_config.rs  mod.rs  path_matcher.rs  protocol.rs  sample_config.yaml  service_provider.rs  watch.rs  ws_config.rs  yaml_config.rs
src/layer/: cors.rs  header.rs  mod.rs  proxy.rs  rate_limit.rs
src/layers/: cache.rs  cors.rs  header.rs  ip_acl.rs  logging.rs  mod.rs  rate_limit.rs  script.rs
src/middleware/: acl.rs  auth.rs  cors.rs  header.rs  logger.rs  metrics.rs  middleware.rs  mod.rs  proxy.rs  rate_limit.rs  upstream.rs
src/middleware/circuit_breaker/: circuit_breaker.rs  mod.rs  state.rs
src/middleware/weighted/: mod.rs  service.rs
src/proxy/: auth_handler.rs  config.rs  gateway.rs  handler.rs  https.rs  mod.rs  proxy.rs  request_handler.rs  server.rs  service_handler.rs
tests/: cors_test.rs  gateway_test.py  mock_server.py  requirements.txt  sample_config.yaml
