[package]
name = "hyperapi"
version = "0.1.0"
authors = ["Leric Zhang <leric.zhang@gmail.com>"]
edition = "2018"


[dependencies]
hyper = "0.13"
log = "0.4"
tokio = { version = "0.2", features = ["full"] }
clap = "2.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tower = "0.3"
tower-balance = "0.3"
tower-load = "0.3"
tower-discover = "0.3"
tower-limit = "0.3"
tower-load-shed = "0.3.0"
tower-util = "0.3"

url = "2"
pin-project = "0.4"
futures = "0.3"
futures-util = "0.3"
anyhow = "1.0"
rand = "0.7"
tracing = "0.1"
base64 = "0.13"
jsonwebtoken = "7"
regex = "1.4"
env_logger = "0.8"
prometheus = "0.10"
lazy_static = "1.4"
tracing-subscriber = "0.2"
mlua = { version = "0.4", features = ["luajit", "vendored"] }
sysinfo = "0.15"
hyper-rustls = "0.21"
etcd-rs = "0.3.0"


[dev-dependencies]
tower-test = "0.3"
tokio-test = "0.2"

