[package]
name = "hyperapi"
version = "0.1.0"
authors = ["Leric Zhang <leric.zhang@gmail.com>"]
edition = "2018"


[dependencies]
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
clap = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serde_urlencoded = "0.7"
tower = { version = "0.4", features=["limit", "balance", "timeout", "load", "load-shed", "discover", "util", "steer"] }
hyper-rustls = "0.22"
tokio-rustls = "0.22"
rustls = "0.19"
rustls-native-certs = "0.5"

async-tungstenite = { version = "0.13", features=["tokio-rustls"] }
url = "2"
pin-project = "0.4"
futures = "0.3"
futures-util = "0.3"
anyhow = "1.0"
rand = "0.7"
base64 = "0.13"
jsonwebtoken = "7"
regex = "1.4"
prometheus = "0.10"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = "0.1"
tracing-bunyan-formatter = "0.1"
tracing-appender ="0.1"
uuid = { version="0.8", features=["v4"] }
etcd-client = "0.6"
